--- a/tox.ini
+++ b/tox.ini
@@ -1,37 +1,34 @@
+# Tox (http://tox.testrun.org/) is a tool for running tests
+# in multiple virtualenvs. This configuration file will run the
+# test suite on all supported python versions. To use it, "pip install tox"
+# and then run "tox" from this directory.
+
 [tox]
-envlist =
-    py37-django{22,30,31,32}
-    py38-django{22,30,31,32,40}
-    py39-django{22,30,31,32,40}
-    py310-django{32,40}
-    checks
+envlist = py26_django12, py26_django13, py26_django14, py27_django12,  py27_django13, py27_django14
 
 [testenv]
-whitelist_externals = make
-deps=
-    django22: Django>=2.2,<2.3
-    django30: Django>=3.0b1,<3.1
-    django31: Django>=3.1,<3.2
-    django32: Django>=3.2,<4.0
-    django40: Django>=4.0,<4.1
-commands = make test
+commands = {envpython} setup.py test
 
-[testenv:checks]
-basepython = python3.7
-passenv = TOXENV CI
-whitelist_externals = make
-deps =
-    Django>=2.2,<2.3
-    coverage==4.5.2
-    flake8
-    python-coveralls
-    mypy
-    django-stubs
-    djangorestframework-stubs
-    black
-setenv =
-    COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
-commands =
-    make checks coverage
-    coverage report
-    coveralls --ignore-errors
+[testenv:py26_django12]
+basepython = python2.6
+deps = Django==1.2.7
+
+[testenv:py26_django13]
+basepython = python2.6
+deps = Django==1.3.5
+
+[testenv:py26_django14]
+basepython = python2.6
+deps = Django==1.4.3
+
+[testenv:py27_django12]
+basepython = python2.7
+deps = Django==1.2.7
+
+[testenv:py27_django13]
+basepython = python2.7
+deps = Django==1.3.5
+
+[testenv:py27_django14]
+basepython = python2.7
+deps = Django==1.4.3
