--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27_django15, py27_django16, py34_django15, py34_django16
+envlist = py27_django15, py27_django16, py33_django15, py33_django16, py34_django15, py34_django16
 
 [testenv]
 commands = {envpython} setup.py test
@@ -15,6 +15,19 @@ basepython = python2.7
 deps =
     Django==1.6.4
     six
+
+[testenv:py33_django15]
+basepython = python3.3
+deps =
+    Django==1.5.7
+    six
+
+[testenv:py33_django16]
+basepython = python3.3
+deps =
+    Django==1.6.4
+    six
+
 
 [testenv:py34_django15]
 basepython = python3.4
