--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist = py27_django15, py27_django16, py33_django15, py33_django16, py34_django15, py34_django16
+envlist = py27_django15, py27_django16, py27_django17,
+          py33_django15, py33_django16, py33_django17,
+          py34_django15, py34_django16, py34_django17
 
 [testenv]
 commands = {envpython} setup.py test
@@ -16,6 +18,12 @@ deps =
     Django==1.6.4
     six
 
+[testenv:py27_django17]
+basepython = python2.7
+deps =
+    https://www.djangoproject.com/download/1.7b3/tarball/
+    six
+
 [testenv:py33_django15]
 basepython = python3.3
 deps =
@@ -28,6 +36,11 @@ deps =
     Django==1.6.4
     six
 
+[testenv:py33_django17]
+basepython = python3.3
+deps =
+    https://www.djangoproject.com/download/1.7b3/tarball/
+    six
 
 [testenv:py34_django15]
 basepython = python3.4
@@ -39,4 +52,10 @@ deps =
 basepython = python3.4
 deps =
     Django==1.6.4
+    six
+
+[testenv:py34_django17]
+basepython = python3.4
+deps =
+    https://www.djangoproject.com/download/1.7b3/tarball/
     six
