Update tox to use Django 1.7.1 and remove six deps

--- a/tox.ini
+++ b/tox.ini
@@ -10,52 +10,43 @@ commands = {envpython} setup.py test
 basepython = python2.7
 deps =
     Django==1.5.7
-    six
 
 [testenv:py27_django16]
 basepython = python2.7
 deps =
     Django==1.6.4
-    six
 
 [testenv:py27_django17]
 basepython = python2.7
 deps =
-    https://github.com/django/django/archive/1.7c1.tar.gz#egg=Django
-    six
+    Django==1.7.1
 
 [testenv:py33_django15]
 basepython = python3.3
 deps =
     Django==1.5.7
-    six
 
 [testenv:py33_django16]
 basepython = python3.3
 deps =
     Django==1.6.4
-    six
 
 [testenv:py33_django17]
 basepython = python3.3
 deps =
-    https://github.com/django/django/archive/1.7c1.tar.gz#egg=Django
-    six
+    Django==1.7.1
 
 [testenv:py34_django15]
 basepython = python3.4
 deps =
     Django==1.5.7
-    six
 
 [testenv:py34_django16]
 basepython = python3.4
 deps =
     Django==1.6.4
-    six
 
 [testenv:py34_django17]
 basepython = python3.4
 deps =
-    https://github.com/django/django/archive/1.7c1.tar.gz#egg=Django
-    six
+    Django==1.7.1
