--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py27_django15, py27_django16, py27_django17,
-          py33_django15, py33_django16, py33_django17,
-          py34_django15, py34_django16, py34_django17
+envlist = py27_django15, py27_django16, py27_django17, py27_django18,
+          py33_django15, py33_django16, py33_django17, py33_django18,
+          py34_django15, py34_django16, py34_django17, py34_django18
 
 [testenv]
 commands = {envpython} setup.py test
@@ -21,6 +21,11 @@ basepython = python2.7
 deps =
     Django==1.7.1
 
+[testenv:py27_django18]
+basepython = python2.7
+deps =
+    Django==1.8.1
+
 [testenv:py33_django15]
 basepython = python3.3
 deps =
@@ -36,6 +41,11 @@ basepython = python3.3
 deps =
     Django==1.7.1
 
+[testenv:py33_django18]
+basepython = python3.3
+deps =
+    Django==1.8.1
+
 [testenv:py34_django15]
 basepython = python3.4
 deps =
@@ -50,3 +60,8 @@ deps =
 basepython = python3.4
 deps =
     Django==1.7.1
+
+[testenv:py34_django18]
+basepython = python3.4
+deps =
+    Django==1.8.1
