--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,9 @@ universal = 1
 
 [extras]
 enum34:python_version>"2.7";:python_version<"3.4"
+
+[flake8]
+exclude = .tox,.git,docs,migrations
+ignore = F403
+max-complexity = 12
+max-line-length = 110
