Run tests against Django 1.9+

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [wheel]
 universal = 1
+
+[extras]
+enum34:python_version>"2.7";:python_version<"3.4"
+
+[flake8]
+exclude = .tox,.git,docs,migrations
+max-complexity = 12
+max-line-length = 110
