--- a/tox.ini
+++ b/tox.ini
@@ -1,67 +1,32 @@
 [tox]
-envlist = py27_django15, py27_django16, py27_django17, py27_django18,
-          py33_django15, py33_django16, py33_django17, py33_django18,
-          py34_django15, py34_django16, py34_django17, py34_django18
+envlist =
+    py{27,34}-django{15,16,17,18,19,110,111}
+    py33-django{15,16,17,18}
+    py35-django{18,19,110,111}
+    coverage
 
 [testenv]
-commands = {envpython} setup.py test
+deps=
+    django15: Django>=1.5,<1.6
+    django16: Django>=1.6,<1.7
+    django17: Django>=1.7,<1.8
+    django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<1.10
+    django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<1.12
+commands = make test
 
-[testenv:py27_django15]
-basepython = python2.7
+[testenv:coverage]
+basepython = python3.5
+passenv = TOXENV CI TRAVIS TRAVIS_*
 deps =
-    Django==1.5.7
-
-[testenv:py27_django16]
-basepython = python2.7
-deps =
-    Django==1.6.4
-
-[testenv:py27_django17]
-basepython = python2.7
-deps =
-    Django==1.7.1
-
-[testenv:py27_django18]
-basepython = python2.7
-deps =
-    Django==1.8.1
-
-[testenv:py33_django15]
-basepython = python3.3
-deps =
-    Django==1.5.7
-
-[testenv:py33_django16]
-basepython = python3.3
-deps =
-    Django==1.6.4
-
-[testenv:py33_django17]
-basepython = python3.3
-deps =
-    Django==1.7.1
-
-[testenv:py33_django18]
-basepython = python3.3
-deps =
-    Django==1.8.1
-
-[testenv:py34_django15]
-basepython = python3.4
-deps =
-    Django==1.5.7
-
-[testenv:py34_django16]
-basepython = python3.4
-deps =
-    Django==1.6.4
-
-[testenv:py34_django17]
-basepython = python3.4
-deps =
-    Django==1.7.1
-
-[testenv:py34_django18]
-basepython = python3.4
-deps =
-    Django==1.8.1
+    Django>=1.8,<1.9
+    flake8
+    python-coveralls
+setenv =
+    COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
+commands =
+    make flake8
+    make coverage
+    coverage report
+    coveralls --ignore-errors
