Run tests against Django 1.9+

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py33-django{15,16,17,18}
     py35-django{18,19,110,111}
     coverage
+skip_missing_interpreters = true
 
 [testenv]
 deps=
