--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 envlist =
-    py{27,34,35}-django{18,19,110,111}
-    py33-django18
-    py36-django111
+    py27-django{18,19,110,111}
+    py34-django{18,19,110,111,20}
+    py35-django{18,19,110,111,20,21}
+    py36-django{111,20,21}
+    py37-django{20,21}
     coverage
-skip_missing_interpreters = true
 
 [testenv]
 deps=
@@ -12,6 +13,8 @@ deps=
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
+    django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
 commands = make test
 
 [testenv:coverage]
