--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 envlist =
     py27-django{18,19,110,111}
     py34-django{18,19,110,111,20}
-    py35-django{18,19,110,111,20,21}
-    py36-django{111,20,21}
-    py37-django{20,21}
+    py35-django{18,19,110,111,20,21,22}
+    py36-django{111,20,21,22}
+    py37-django{20,21,22}
     coverage
 
 [testenv]
@@ -15,6 +15,7 @@ deps=
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
 commands = make test
 
 [testenv:coverage]
