--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,14 @@
 [tox]
 envlist =
-    py27-django{18,19,110,111}
-    py34-django{18,19,110,111,20}
-    py35-django{18,19,110,111,20,21,22}
+    py27-django111
+    py34-django{111,20}
+    py35-django{111,20,21,22}
     py36-django{111,20,21,22}
     py37-django{20,21,22}
     coverage
 
 [testenv]
 deps=
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
@@ -22,7 +19,7 @@ commands = make test
 basepython = python3.5
 passenv = TOXENV CI TRAVIS TRAVIS_*
 deps =
-    Django>=1.8,<1.9
+    Django>=2.2,<2.3
     flake8
     python-coveralls
 setenv =
