Travis: add mypy checks to coverage

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ setenv =
     COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
 commands =
     make flake8
+    make mypy
     make coverage
     coverage report
     coveralls --ignore-errors
