--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,8 @@ deps =
     Django>=2.2,<2.3
     flake8
     python-coveralls
+    mypy
+    django-stubs
 setenv =
     COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
 commands =
