--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     coverage
 
 [testenv]
+whitelist_externals = make
 deps=
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
@@ -16,14 +17,16 @@ deps=
 commands = make test
 
 [testenv:coverage]
-basepython = python3.5
+basepython = python3.7
 passenv = TOXENV CI TRAVIS TRAVIS_*
+whitelist_externals = make
 deps =
     Django>=2.2,<2.3
     flake8
     python-coveralls
     mypy
     django-stubs
+    djangorestframework-stubs
 setenv =
     COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
 commands =
