Travis: verify that black has been used

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist =
     py35-django{111,20,21,22}
     py36-django{111,20,21,22}
     py37-django{20,21,22}
-    coverage
+    checks
 
 [testenv]
 whitelist_externals = make
@@ -16,7 +16,7 @@ deps=
     django22: Django>=2.2,<2.3
 commands = make test
 
-[testenv:coverage]
+[testenv:checks]
 basepython = python3.7
 passenv = TOXENV CI TRAVIS TRAVIS_*
 whitelist_externals = make
@@ -30,8 +30,6 @@ deps =
 setenv =
     COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
 commands =
-    make flake8
-    make mypy
-    make coverage
+    make checks coverage
     coverage report
     coveralls --ignore-errors
