Tox: add black as a dep

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ deps =
     mypy
     django-stubs
     djangorestframework-stubs
+    black
 setenv =
     COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
 commands =
