--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,9 @@ envlist =
     py27-django111
     py34-django{111,20}
     py35-django{111,20,21,22}
-    py36-django{111,20,21,22}
-    py37-django{20,21,22}
+    py36-django{111,20,21,22,30}
+    py37-django{20,21,22,30}
+    py38-django{20,21,22,30}
     checks
 
 [testenv]
@@ -14,6 +15,7 @@ deps=
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
+    django30: Django>=3.0b1,<3.1
 commands = make test
 
 [testenv:checks]
