--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,21 @@
 [wheel]
 universal = 1
+
+[extras]
+enum34:python_version>"2.7";:python_version<"3.4"
+
+[flake8]
+exclude = .tox,.git,docs,migrations
+max-complexity = 12
+max-line-length = 88
+
+[isort]
+line_length = 88
+known_first_party = django_enumfield
+default_section = THIRDPARTY
+multi_line_output = 3
+combine_as_imports = true
+include_trailing_comma = true
+force_grid_wrap = 0
+skip = migrations
+not_skip = __init__.py
