--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,38 @@
 [tox]
 envlist =
-    py27-django{18,19,110,111}
-    py34-django{18,19,110,111,20}
-    py35-django{18,19,110,111,20,21}
-    py36-django{111,20,21}
-    py37-django{20,21}
-    coverage
+    py27-django111
+    py34-django{111,20}
+    py35-django{111,20,21,22}
+    py36-django{111,20,21,22,30}
+    py37-django{20,21,22,30}
+    py38-django{20,21,22,30}
+    checks
 
 [testenv]
+whitelist_externals = make
 deps=
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
+    django30: Django>=3.0b1,<3.1
 commands = make test
 
-[testenv:coverage]
-basepython = python3.5
+[testenv:checks]
+basepython = python3.7
 passenv = TOXENV CI TRAVIS TRAVIS_*
+whitelist_externals = make
 deps =
-    Django>=1.8,<1.9
+    Django>=2.2,<2.3
     flake8
     python-coveralls
+    mypy
+    django-stubs
+    djangorestframework-stubs
+    black
 setenv =
     COVERALLS_REPO_TOKEN=LdECqqwg7eelQx9w8gvooUZCFIaCqGZCv
 commands =
-    make flake8
-    make coverage
+    make checks coverage
     coverage report
     coveralls --ignore-errors
