Don't cover test migrations

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,14 @@ exclude = .tox,.git,docs,migrations
 max-complexity = 12
 max-line-length = 88
 
+[coverage:run]
+omit =
+    */migrations/*
+
+[coverage:report]
+omit =
+    */migrations/*
+
 [isort]
 line_length = 88
 known_first_party = django_enumfield
