Pin coverage to 4.5.2

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ passenv = TOXENV CI TRAVIS TRAVIS_*
 whitelist_externals = make
 deps =
     Django>=2.2,<2.3
+    coverage==4.5.2
     flake8
     python-coveralls
     mypy
