--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,13 @@
 [tox]
 envlist =
-    py27-django111
-    py34-django{111,20}
-    py35-django{111,20,21,22}
-    py36-django{111,20,21,22,30,31}
-    py37-django{20,21,22,30,31}
-    py38-django{20,21,22,30,31}
+    py37-django{22,30,31}
+    py38-django{22,30,31}
+    py39-django{22,30,31}
     checks
 
 [testenv]
 whitelist_externals = make
 deps=
-    django111: Django>=1.11,<1.12
-    django20: Django>=2.0,<2.1
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     django30: Django>=3.0b1,<3.1
     django31: Django>=3.1,<3.2
@@ -21,7 +15,7 @@ commands = make test
 
 [testenv:checks]
 basepython = python3.7
-passenv = TOXENV CI TRAVIS TRAVIS_*
+passenv = TOXENV CI
 whitelist_externals = make
 deps =
     Django>=2.2,<2.3
