--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist =
-    py37-django{22,30,31}
-    py38-django{22,30,31}
-    py39-django{22,30,31}
+    py37-django{22,30,31,32}
+    py38-django{22,30,31,32}
+    py39-django{22,30,31,32}
+    py310-django32
     checks
 
 [testenv]
@@ -11,6 +12,7 @@ deps=
     django22: Django>=2.2,<2.3
     django30: Django>=3.0b1,<3.1
     django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<4.0
 commands = make test
 
 [testenv:checks]
