--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
     py37-django{22,30,31,32}
-    py38-django{22,30,31,32}
-    py39-django{22,30,31,32}
-    py310-django32
+    py38-django{22,30,31,32,40}
+    py39-django{22,30,31,32,40}
+    py310-django{32,40}
     checks
 
 [testenv]
@@ -13,6 +13,7 @@ deps=
     django30: Django>=3.0b1,<3.1
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<4.0
+    django40: Django>=4.0,<4.1
 commands = make test
 
 [testenv:checks]
